--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-Ted Ralphs <ted@lehigh.edu>
+Tianqi Liu <liutianqi17@mails.ucas.ac.cn>
+Francisco Saldanha-da-Gama <fsgama@ciencias.ulisboa.pt>
+Shuming Wang <wangshuming@ucas.edu.cn>
+Yuchen Mao <ycmao.ucas@gmail.com>
